--- a/src/containers/AppContent.css
+++ b/src/containers/AppContent.css
@@ -11,6 +11,7 @@
   top: 50%;
   left: 50%;
   min-width: 600px;
+  min-height: 450px;
   transform: translate(-50%, -50%);
   position: relative;
 }
